// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: AchieveBase
message AchieveBase
{	
	
	
	repeated AchieveDefine Achieve = 1; // Achieve

}

// Defined in table: Achieve
message AchieveDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 Group = 2; 
	
	
	optional string Name = 3; 
	
	
	optional int32 Tran = 4; 
	
	
	optional string Description = 5; 
	
	
	optional int32 Tag = 6; 
	
	
	optional int32 DailyQuest = 7; 
	
	
	optional int32 PreId = 8; 
	
	
	optional int32 Type = 9; 
	
	
	optional int32 Para1 = 10; 
	
	
	repeated int32 Para2 = 11; 
	
	
	optional string Icon = 12; 
	
	
	optional int32 Grade = 13; 
	
	
	repeated int32 RewardType = 14; 
	
	
	repeated int32 RewardId = 15; 
	
	
	repeated int32 RewardNum = 16; 
	
	
	repeated int32 PlayingFieldPattern = 17; 
	
	
	optional int32 IsSafe = 18; 
	
	
	optional int32 LuckTaskPara = 19; 

}

