// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: LuckyTaskBase
message LuckyTaskBase
{	
	
	
	repeated LuckyTaskDefine LuckyTask = 1; // LuckyTask

}

// Defined in table: LuckyTask
message LuckyTaskDefine
{	
	
	
	optional int32 Id = 1; // id(规则是类型*1000+顺序码)
	
	
	optional string Desc = 2; // 说明
	
	
	repeated int32 Time = 3; // 开始时间整点
	
	
	optional int32 TaskId = 4; // 任务id
	
	
	optional int32 MaxTake = 5; // 每轮最多接取人数
	
	
	repeated int64 Gold = 6; // 金币要求最小与最大值
	
	
	optional int32 TotalPlay = 7; // 历史牌局数
	
	
	optional int32 YesterdayPlay = 8; // 昨日对局
	
	
	optional int32 ThreedayPlay = 9; // 前三天平均对局
	
	
	optional int32 MustPay = 10; // 是否必须付费用户

}

